[gd_scene load_steps=9 format=4 uid="uid://bqctr6ho0scy1"]

[ext_resource type="Script" path="res://scripts/minigames/fix_minigame.gd" id="1_h7p25"]
[ext_resource type="Texture2D" uid="uid://m6o0p5v2tp7h" path="res://sprites/minigames/minigames.png" id="1_s4a47"]
[ext_resource type="PackedScene" uid="uid://d25ve1wanpu2q" path="res://scens/minigames/items/indicator.tscn" id="2_uj0js"]
[ext_resource type="PackedScene" uid="uid://bdsqf1hmv0bix" path="res://scens/minigames/items/fix_area.tscn" id="3_2pjkl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7hcgu"]
texture = ExtResource("1_s4a47")
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0

[sub_resource type="TileSet" id="TileSet_nb3dv"]
sources/0 = SubResource("TileSetAtlasSource_7hcgu")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0aa7p"]
size = Vector2(20, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlnoe"]
size = Vector2(20, 64)

[node name="fix_minigame" type="Node2D"]
texture_filter = 3
script = ExtResource("1_h7p25")

[node name="background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAABAAYAAAAAAAEAAAACAAAAAAAAAAEAAAACAAEAAAAAAAEAAAACAAIAAAAAAAEAAAACAAMAAAAAAAEAAAACAAQAAAAAAAEAAAACAAUAAAAAAAEAAAACAAYAAAAAAAEAAAADAAAAAAAAAAEAAAADAAEAAAAAAAEAAAADAAIAAAAAAAEAAAADAAMAAAAAAAEAAAADAAQAAAAAAAEAAAADAAUAAAAAAAEAAAADAAYAAAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAAAAAEAAAAEAAIAAAAAAAEAAAAEAAMAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAEAAAAEAAYAAAAAAAEAAAAFAAAAAAAAAAEAAAAFAAEAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAMAAAAAAAEAAAAFAAQAAAAAAAEAAAAFAAUAAAAAAAEAAAAFAAYAAAAAAAEAAAAGAAAAAAAAAAEAAAAGAAEAAAAAAAEAAAAGAAIAAAAAAAEAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAEAAAAHAAAAAAAAAAEAAAAHAAEAAAAAAAEAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAEAAAAHAAYAAAAAAAEAAAAIAAAAAAAAAAEAAAAIAAEAAAAAAAEAAAAIAAIAAAAAAAEAAAAIAAMAAAAAAAEAAAAIAAQAAAAAAAEAAAAIAAUAAAAAAAEAAAAIAAYAAAAAAAEAAAAJAAAAAAAAAAEAAAAJAAEAAAAAAAEAAAAJAAIAAAAAAAEAAAAJAAMAAAAAAAEAAAAJAAQAAAAAAAEAAAAJAAUAAAAAAAEAAAAJAAYAAAAAAAEAAAAKAAAAAAAAAAEAAAAKAAEAAAAAAAEAAAAKAAIAAAAAAAEAAAAKAAMAAAAAAAEAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAEAAAAKAAYAAAAAAAEAAAALAAAAAAAAAAEAAAALAAEAAAAAAAEAAAALAAIAAAAAAAEAAAALAAMAAAAAAAEAAAALAAQAAAAAAAEAAAALAAUAAAAAAAEAAAALAAYAAAAAAAEAAAAMAAAAAAAAAAEAAAAMAAEAAAAAAAEAAAAMAAIAAAAAAAEAAAAMAAMAAAAAAAEAAAAMAAQAAAAAAAEAAAAMAAUAAAAAAAEAAAAMAAYAAAAAAAEAAAANAAAAAAAAAAEAAAANAAEAAAAAAAEAAAANAAIAAAAAAAEAAAANAAMAAAAAAAEAAAANAAQAAAAAAAEAAAANAAUAAAAAAAEAAAANAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAABAAcAAAAAAAEAAAACAAcAAAAAAAEAAAADAAcAAAAAAAEAAAAEAAcAAAAAAAEAAAAFAAcAAAAAAAEAAAAGAAcAAAAAAAEAAAAHAAcAAAAAAAEAAAAIAAcAAAAAAAEAAAAJAAcAAAAAAAEAAAAKAAcAAAAAAAEAAAALAAcAAAAAAAEAAAAMAAcAAAAAAAEAAAANAAcAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_nb3dv")

[node name="fix_areas" type="Node2D" parent="."]
position = Vector2(40, 48)

[node name="fix_area1" parent="fix_areas" instance=ExtResource("3_2pjkl")]

[node name="fix_area2" parent="fix_areas" instance=ExtResource("3_2pjkl")]
position = Vector2(0, 16)

[node name="fix_area3" parent="fix_areas" instance=ExtResource("3_2pjkl")]
position = Vector2(0, 32)

[node name="fix_area4" parent="fix_areas" instance=ExtResource("3_2pjkl")]
position = Vector2(0, 48)

[node name="indicators" type="Node2D" parent="."]
position = Vector2(50, 32)

[node name="indicator1" parent="indicators" instance=ExtResource("2_uj0js")]

[node name="indicator2" parent="indicators" instance=ExtResource("2_uj0js")]
position = Vector2(0, 16)

[node name="indicator3" parent="indicators" instance=ExtResource("2_uj0js")]
position = Vector2(0, 32)

[node name="indicator4" parent="indicators" instance=ExtResource("2_uj0js")]
position = Vector2(0, 48)

[node name="frontground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAQAAAAAAAMAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAAUAAAAAAAQAAAAAAAYAAAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAABAAMAAAABAAIAAAABAAQAAAABAAMAAAABAAQAAAABAAQAAAABAAQAAAABAAUAAAABAAQAAAABAAYAAAABAAUAAAACAAAAAAAAAAEAAAACAAEAAAABAAMAAAACAAIAAAACAAQAAAACAAMAAAACAAQAAAACAAQAAAACAAQAAAACAAUAAAACAAQAAAACAAYAAAABAAUAAAADAAAAAAAAAAEAAAADAAEAAAABAAMAAAADAAIAAAACAAQAAAADAAMAAAACAAQAAAADAAQAAAACAAQAAAADAAUAAAACAAQAAAADAAYAAAABAAUAAAAEAAAAAAAAAAEAAAAEAAEAAAABAAMAAAAEAAIAAAACAAQAAAAEAAMAAAACAAQAAAAEAAQAAAACAAQAAAAEAAUAAAACAAQAAAAEAAYAAAABAAUAAAAFAAAAAAAAAAEAAAAFAAEAAAABAAMAAAAFAAIAAAACAAQAAAAFAAMAAAACAAQAAAAFAAQAAAACAAQAAAAFAAUAAAACAAQAAAAFAAYAAAABAAUAAAAGAAAAAAAAAAEAAAAGAAEAAAABAAMAAAAGAAIAAAACAAQAAAAGAAMAAAACAAQAAAAGAAQAAAACAAQAAAAGAAUAAAACAAQAAAAGAAYAAAABAAUAAAAHAAAAAAAAAAEAAAAHAAEAAAABAAMAAAAHAAIAAAACAAQAAAAHAAMAAAACAAQAAAAHAAQAAAACAAQAAAAHAAUAAAACAAQAAAAHAAYAAAABAAUAAAAIAAAAAAAAAAEAAAAIAAEAAAABAAMAAAAIAAIAAAACAAQAAAAIAAMAAAACAAQAAAAIAAQAAAACAAQAAAAIAAUAAAACAAQAAAAIAAYAAAABAAUAAAAJAAAAAAAAAAEAAAAJAAEAAAABAAMAAAAJAAIAAAACAAQAAAAJAAMAAAACAAQAAAAJAAQAAAACAAQAAAAJAAUAAAACAAQAAAAJAAYAAAABAAUAAAAKAAAAAAAAAAEAAAAKAAEAAAABAAMAAAAKAAIAAAACAAQAAAAKAAMAAAACAAQAAAAKAAQAAAACAAQAAAAKAAUAAAACAAQAAAAKAAYAAAABAAUAAAALAAAAAAAAAAEAAAALAAEAAAABAAMAAAALAAIAAAACAAQAAAALAAMAAAACAAQAAAALAAQAAAACAAQAAAALAAUAAAACAAQAAAALAAYAAAABAAUAAAAMAAAAAAAAAAEAAAAMAAEAAAABAAMAAAAMAAIAAAADAAQAAAAMAAMAAAADAAQAAAAMAAQAAAADAAQAAAAMAAUAAAADAAQAAAAMAAYAAAABAAUAAAANAAAAAAAAAAEAAAANAAEAAAAAAAEAAAANAAIAAAAEAAQAAAANAAMAAAAEAAQAAAANAAQAAAAEAAQAAAANAAUAAAAEAAQAAAANAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAABAAcAAAAAAAEAAAACAAcAAAAAAAEAAAADAAcAAAAAAAEAAAAEAAcAAAAAAAEAAAAFAAcAAAAAAAEAAAAGAAcAAAAAAAEAAAAHAAcAAAAAAAEAAAAIAAcAAAAAAAEAAAAJAAcAAAAAAAEAAAAKAAcAAAAAAAEAAAALAAcAAAAAAAEAAAAMAAcAAAAAAAEAAAANAAcAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_nb3dv")

[node name="direction_change_area" type="Area2D" parent="."]

[node name="collision1" type="CollisionShape2D" parent="direction_change_area"]
position = Vector2(7, 64)
shape = SubResource("RectangleShape2D_0aa7p")

[node name="collision2" type="CollisionShape2D" parent="direction_change_area"]
position = Vector2(218, 64)
shape = SubResource("RectangleShape2D_nlnoe")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(112, 64)
zoom = Vector2(8.1, 8.1)

[connection signal="body_entered" from="direction_change_area" to="." method="_on_direction_change_area_body_entered"]
